--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,8 @@
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/images.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
