--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "pinia": "^2.1.7",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue": "^3.4.15",
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.5.1"
   },
   "devDependencies": {
+    "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -27,7 +29,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
+    "typescript": "^5.3.3"
   },
   "eslintConfig": {
     "root": true,
