--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "@vue/test-utils": "^2.4.4",
+    "cypress": "^13.6.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jest": "^29.7.0",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
