--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
     "postcss": "^8.4.31",
+    "register-service-worker": "^1.7.2",
     "tailwindcss": "^3.3.3",
     "vue": "^3.4.15",
     "vue-router": "^4.0.3",
@@ -23,6 +24,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
